# APX

./: .gitignore  CMakeLists.txt  README.md  apx.md  main.apx
apx/: apx.tmLanguage
cmake/: apxc.cmake
include/: AST.h  ArgParser.h  CodeGenerator.h  ErrorReporter.h  Lexer.h  Logger.h  Parser.h  SymbolTable.h  Version.h
src/: AST.cpp  ArgParser.cpp  CodeGenerator.cpp  ErrorReporter.cpp  Lexer.cpp  Parser.cpp  SymbolTable.cpp  main.cpp
tests/: CMakeLists.txt  test_compiler_creation.cpp  test_functions.cpp
